# concert-planner

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: concerts_agent.py  cost_agent.py  directions_agent.py  restaurants_agent.py  spotify_agent.py  summary_agent.py
backend/app/graph/: graph.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/pages/: ConcertPickerPage.jsx  LandingPage.jsx  PreferencesPage.jsx  ResultsPage.jsx
